<?xml version="1.0"?>
<package>
  <name>rm_i2c</name>
  <version>1.0.0</version>
  <description>I2C manager with libmraa: INA219</description>
  <maintainer email="lcesarini1962@gmail.com">Luca Cesarini</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
 
 
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend> 
 
  <export/>
</package>
